fix overflow on small phones

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -102,6 +102,10 @@ main {
         "content";
         grid-template-columns: 1fr;
     }
+
+    main .top img.pfp {
+        display: none;
+    }
 }
 
 h1, h2, h3, h4, h5, h6, p, a {
